Moved context menues to the side on mobile to prevent accidental clicks

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1082,6 +1082,8 @@ aside.creation nav a span {
 	}
     .UI-Context-Menu {
         min-width: 104px !important;
+		margin-left: 2em;
+		padding-top: 0.2em !important;
     }
 	.launcher .UI-App-Icon {
 		width: 32px !important;
